- Added achievements! You can look at the achievements in `g*tokens`, and they'll get you tokens when you complete them!

- Fixed stucking you into games if they have errors returning messages...

Enjoy! ~ deprilula28